--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                     <a href="" target="_blank"><p class="title is-4"></p></a>
                   </div>
                   <div class="content">
-                    <a style="cursor: pointer;" href="">HackFS 2020</a>.  <br  />
-                    <a>#</a>
-                    <a>#IPFS</a>
+                    <a style="cursor: pointer;" href=""></a>.  <br  />
+                    <a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -197,7 +197,7 @@
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-16by9">
-                    <img src="./assets/img/astrojump-banner.png" alt="">
+                    <img src="" alt="">
                     <a href="" target="_blank">
                       <div class="overlay"></div>
                     </a>
@@ -223,7 +223,7 @@
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-16by9">
-                    <img src="./assets/img/flix-banner.png" alt="flix">
+                    <img src="" alt="">
                     <a href="" target="_blank">
                       <div class="overlay"></div>
                     </a>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="card-content">
                   <div class="media-content">
-                    <a href="" target="_blank"><p class="title is-4">Flix</p></a>
+                    <a href="" target="_blank"><p class="title is-4"></p></a>
                   </div>
                   <div class="content">
                     .<br  />
