--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   	<meta name="author" content="Anja Vujacic">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Anja's Website">
-    <meta property="og:image" content="https://www.raphaelkoh.me/assets/img/avatar.png">
+    <meta property="og:image" content="">
     <meta property="og:description" content="Welcome to my website!">
     <meta property="og:url" content="https://www.anjavujacic.me">
   </head>
@@ -64,7 +64,7 @@
           <a class="nav-item is-tab" href="#projects">Projects</a>
           <a class="nav-item is-tab" href="#cv">CV</a>
           <a class="nav-item" target="_blank" href="">Resume</a>
-  				<a class="nav-item" target="_blank" href="./astrojump/index.html"></a>
+  				<a class="nav-item" target="_blank" href=""></a>
   			</div>
 
   			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
