--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="has-text-centered">
               <span class="about-subtitle">
-                ⟨ Software Engineer student|  ⟩</span>
+                ⟨ Software Engineer student ⟩</span>
               </span>
             </div>
           </div>
