--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     <a href="" target="_blank"><p class="title is-4"></p></a>
                   </div>
                   <div class="content">
-                   !<br  />
-                    <a>#Node.js</a>
-                    <a>#React.js</a>
+                   <br  />
+                    <a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -157,12 +157,12 @@
                   </div>
                   <div class="content">
                    <br />
-                    <a>#JavaScript</a>
-                    <a>#TypeScript</a>
+                    <a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
-                  <a class="card-footer-item" href="" target="_blank">npm package</a>
+                  <a class="card-footer-item" href="" target="_blank"></a>
                   <a class="card-footer-item" href="" target="_blank">Github</a>
                 </footer>
               </div>
@@ -188,7 +188,7 @@
                   </div>
                 </div>
                 <footer class="card-footer">
-                  <a class="card-footer-item" href="" target="_blank">Demo Video</a>
+                  <a class="card-footer-item" href="" target="_blank"></a>
                   <a class="card-footer-item" href="" target="_blank">Github</a>
                 </footer>
               </div>
@@ -209,13 +209,13 @@
                   </div>
                   <div class="content">
                    <br />
-                    <a>#C#</a>
-                    <a>#Unity</a>
+                    <a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
-                  <a class="card-footer-item" href="" target="_blank">Google Play Store</a>
-                  <a class="card-footer-item" href="" target="_blank">Apple App Store</a>
+                  <a class="card-footer-item" href="" target="_blank"></a>
+                  <a class="card-footer-item" href="" target="_blank"></a>
                 </footer>
               </div>
             </div>
@@ -262,8 +262,8 @@
                   </div>
                   <div class="content">
                     .<br  />
-                    <a>#Tensorflow</a>
-                    <a>#</a>
+                    <a></a>
+                    <a></a>
                     <a></a>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                   </div>
                   <div class="content">
                    <br />
-                    <a>#Flutter</a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -314,7 +314,7 @@
                   </div>
                   <div class="content">
                     <br  />
-                    <a>#Tensorflow</a>
+                    <a></a>
                     <a></a>
                     <a></a>
                   </div>
@@ -341,8 +341,8 @@
                   </div>
                   <div class="content">
                     .<br  />
-                    <a>#MachineLearning</a>
-                    <a>#ComputerVision</a>
+                    <a></a>
+                    <a></a>
                     <a></a>
                   </div>
                 </div>
@@ -368,9 +368,9 @@
                   </div>
                   <div class="content">
                     <br />
-										<a>#Node.js</a>
-                    <a>#Express.js</a>
-                    <a>#Socket.IO</a>
+		     <a></a>
+                    <a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -394,8 +394,8 @@
                     <a href="" target="_blank"><p class="title is-4"></p></a>
                   </div>
                   <div class="content">
-                    <a>#Node.js</a>
-                    <a>#Express.js</a>
+                    <a></a>
+                    <a></a>
                     <a>#scikit-learn</a>
                   </div>
                 </div>
@@ -421,8 +421,8 @@
                   </div>
                   <div class="content">
                     .<br />
-										<a>#Google Cloud Functions</a>
-                    <a>#DialogFlow</a>
+										<a></a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -449,7 +449,7 @@
                   </div>
                   <div class="content">
                    <br  />
-                    <a>#MathJax</a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -493,7 +493,7 @@
                 </div>
                 <div class="card-content">
                   <div class="media-content">
-                    <a href="" target="_blank"><p class="title is-4">y</p></a>
+                    <a href="" target="_blank"><p class="title is-4"></p></a>
                   </div>
                   <div class="content">
                    
