--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-16by9">
-                    <img src="./assets/img/planetflare-banner.png" alt="" style="object-fit: contain;">
+                    <img src="" alt="" style="object-fit: contain;">
                     <a href="" target="_blank">
                       <div class="overlay"></div>
                     </a>
@@ -356,7 +356,7 @@
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-16by9">
-                    <img src="" alt="Face off">
+                    <img src="" alt="">
                     <a href="" target="_blank">
                       <div class="overlay"></div>
                     </a>
@@ -396,7 +396,7 @@
                   <div class="content">
                     <a></a>
                     <a></a>
-                    <a>#scikit-learn</a>
+                    <a></a>
                   </div>
                 </div>
                 <footer class="card-footer">
@@ -409,7 +409,7 @@
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-16by9">
-                    <img src="./assets/img/recipe-banner.png" alt="">
+                    <img src="" alt="">
                     <a href="" target="_blank">
                       <div class="overlay"></div>
                     </a>
