--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="has-text-centered">
               <span class="about-subtitle">
-                ⟨ Software Engineer student <span>&#128105;</span>⟩
+                ⟨ Software Engineer student <span>&#128105; &#8205; &#128187;</span>⟩
               </span>
             </div>
           </div>
